cropped cta image correctly.

--- a/css/index.css
+++ b/css/index.css
@@ -164,8 +164,9 @@ p {
 header {
   display: flex;
   justify-content: center;
+  position: fixed;
   height: 50px;
-  width: 100%;
+  width: 1024px;
   background: #99A4AF;
   flex-direction: row;
 }
@@ -189,4 +190,11 @@ header nav .menu a {
   display: none;
   height: 100%;
   width: 100%;
+}
+.home .cta {
+  margin: 0;
+  overflow: hidden;
+}
+.home .cta img {
+  margin-top: -4.5%;
 }
